# GithubRepoAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  github_api.py  main.py  models.py  schemas.py  utils.py
app/dao/: crud.py
tests/: pytest.ini  test_integration.py
