[tool.poetry]
name = "githubrepoapi"
version = "0.1.0"
description = ""
authors = ["Weicheng Zhu <zhuwch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"
greenlet = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

